# stormlib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: mpq.rs
docs/: CLI_GUIDE.md
examples/: extract.rs  parity_harness.rs
fixtures/: crypto_vectors.txt
fixtures/parity/: stormlib_mixed_sectors.mpq  stormlib_patch_base.mpq  stormlib_patch_overlay.mpq  stormlib_writer_reference.mpq
src/: error.rs  lib.rs  types.rs
src/archive/: attributes.rs  compact.rs  create.rs  info.rs  mod.rs  open.rs  patch.rs  patch_apply.rs  verify.rs
src/compression/: adpcm.rs  huffman.rs  huffman_tables.rs  mod.rs  sparse.rs
src/crypto/: mod.rs
src/file/: add.rs  callbacks.rs  extract.rs  find.rs  list.rs  mod.rs  read.rs
src/internal/: common.rs  debug.rs  file_table.rs  mod.rs  subtypes.rs  utf8.rs
src/stream/: mod.rs
tests/: attributes_full_compat_parity.rs  attributes_patch.rs  common.rs  compression_codec_vectors.rs  create_add_compact_verify.rs  crypto_vectors.rs  info_api_parity.rs  list_find.rs  mixed_sector_parity.rs  mutation_api_parity.rs  open_archive.rs  patch_chain_parity.rs  patch_list.rs  read_error_mapping.rs  read_extract.rs  read_path_semantics.rs  streaming_write_api.rs  verify_corruption_mapping.rs  verify_raw_full_parity.rs  writer_equivalence_parity.rs
tools/parity/: run_parity.sh
tools/parity/api_parity/: feature_matrix.json  run_codec_parity_checks.sh  run_verify_raw_full_checks.sh
tools/parity/full_api/: run_full_api_parity.sh
